syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Valmar";
package stats;

// Service definition for scene resource access
service Stats {
  
  // Get the bubble range of a member in a timespan
  rpc GetBubbleTimespanRange (BubbleTimespanRangeRequest) returns (BubbleTimespanRangeReply);
}

message BubbleTimespanRangeRequest {
  int32 login = 1;
  google.protobuf.Timestamp startDate = 2;
  google.protobuf.Timestamp endDate = 3;
}

message BubbleTimespanRangeReply {
  int32 startAmount = 1;
  int32 endAmount = 2;
}